--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://donovan.github.io"
+baseURL: "https://bowsword230.github.io"
 languageCode: "en-us"
 title: "Donovan GUIGNIER"
 theme: hugo-profile
