--- a/config.yaml
+++ b/config.yaml
@@ -169,7 +169,7 @@ params:
   # Experience
   experience:
     enable: true
-    title: "Test FB"
+    #title: "Test FB"
     items:
       - job: "Mon Facebook."
         company: "Facebook"
@@ -179,7 +179,7 @@ params:
           enable: true
           name: "View the project"
           url: "https://www.facebook.com/LeBron/?locale=fr_FR"
-          content:
+          content: |-
           - Lead backend developer for a product.
           - Created a frontend design for a product.
           
