--- a/config.yaml
+++ b/config.yaml
@@ -179,9 +179,7 @@ params:
           enable: true
           name: "View the project"
           url: "https://www.facebook.com/LeBron/?locale=fr_FR"
-          content: |-
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+          content: "TestContent"
           
   # Education
   education:
