--- a/config.yaml
+++ b/config.yaml
@@ -189,6 +189,6 @@ params:
     items:
       - title: ""
         school:
-          name: "University of California, Berkeley"
+          name: "Université d'Akron, Ohio"
           url: "https://www.uakron.edu/"
 
