--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ Menus:
     - identifier: AP
       name: AP et Projets
       title: AP et Projets
-      url: /projets/
+      url: /blogs/
       weight: 1
     - identifier: Stages
       name: Stages
