--- a/config.yaml
+++ b/config.yaml
@@ -27,12 +27,12 @@ Menus:
     - identifier: AP
       name: AP et Projets
       title: AP et Projets
-      url: /blogs/
+      url: /projets/
       weight: 1
     - identifier: Stages
       name: Stages
       title: Stages
-      url: /Stages/
+      url: /stages/
       weight: 2
     #Dropdown menu
     # - identifier: dropdown
